shuffling and splitting messages

--- a/src/spamDetector.ipynb
+++ b/src/spamDetector.ipynb
@@ -232,6 +232,157 @@
    "source": [
     "emails.describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2: Shuffling  and Splitting the Messages\n",
+    "\n",
+    "In the second part of this activity, emails are shuffled and split them into a training set (2,500 messages), a validation set (1,000 messages), and a test set (all remaining messages).\n",
+    "\n",
+    "Shuffling messages is done using the `sample` *function* from the `pandas` *library*.\n",
+    "\n",
+    "`frac` denotes the proportion of the *dataframe* to sample, and `random_state` is a random seed that ensures reproducibility of your results. \n",
+    "\n",
+    "Reset the *index* of `emails` to align with the shuffled emails by using the `reset_index` *function* with the appropriate *argument*. \n",
+    "\n",
+    "Here's a link for you where you can find the documentation about the [`reset_index()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.reset_index.html) *function*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emails = emails.sample(frac = 1, random_state = 0).reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the code cell below to visualize the updated *dataframe*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Storming msg: Wen u lift d phne, u say \"HELLO\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>&lt;Forwarded from 448712404000&gt;Please CALL 08712...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>And also I've sorta blown him off a couple tim...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Sir Goodmorning, Once free call me.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>All will come alive.better correct any good lo...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  label                                              email\n",
+       "0   ham  Storming msg: Wen u lift d phne, u say \"HELLO\"...\n",
+       "1  spam  <Forwarded from 448712404000>Please CALL 08712...\n",
+       "2   ham  And also I've sorta blown him off a couple tim...\n",
+       "3   ham                Sir Goodmorning, Once free call me.\n",
+       "4   ham  All will come alive.better correct any good lo..."
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emails.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, emails are split into a training set (the first 2,500 emails in the *dataframe*), a validation set (the next 1,000 emails), and a testing set (the remaining emails). These three sets will be defined as `trainingMsgs`, `valMsgs`, and `testingMsgs`.\n",
+    "\n",
+    "In the code cell below, the messages and their correspoding labels are defined. Then messages are split into the required sets according to the instructions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "email = list(emails.email) \n",
+    "lbls =list(emails.label) \n",
+    "trainingEmail = email[:2500] \n",
+    "valEmail = email[2500:3500] \n",
+    "testingEmail = email[3500:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below splits the labels into a training set, a validation set, and a test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traininglbls = lbls[:2500] \n",
+    "vallbls = lbls[2500:3500] \n",
+    "testinglbls = lbls[3500:]"
+   ]
   }
  ],
  "metadata": {
