Naïve Bayes Classifier

--- a/src/spamDetector.ipynb
+++ b/src/spamDetector.ipynb
@@ -239,7 +239,7 @@
    "source": [
     "### Part 2: Shuffling  and Splitting the Messages\n",
     "\n",
-    "In the second part of this activity, emails are shuffled and split them into a training set (2,500 messages), a validation set (1,000 messages), and a test set (all remaining messages).\n",
+    "In the second part, emails are shuffled and split them into a training set (2,500 messages), a validation set (1,000 messages), and a test set (all remaining messages).\n",
     "\n",
     "Shuffling messages is done using the `sample` *function* from the `pandas` *library*.\n",
     "\n",
@@ -382,6 +382,65 @@
     "traininglbls = lbls[:2500] \n",
     "vallbls = lbls[2500:3500] \n",
     "testinglbls = lbls[3500:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 3: Building a Simple Naïve Bayes Classifier From Scratch\n",
+    "\n",
+    "While Python’s SciKit-learn *library* has a [Naïve Bayes classifier](https://scikit-learn.org/stable/modules/naive_bayes.html), it works with continuous probability distributions and assumes numerical features. \n",
+    "\n",
+    "Here is a simple Naïve Bayes classifier built from scratch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "class NaiveBayesForSpam:\n",
+    "    def train (self, nonSPamMessages, spamMessages):\n",
+    "        self.words = set (' '.join (nonSPamMessages + spamMessages).split())\n",
+    "        self.priors = np.zeros (2)\n",
+    "        self.priors[0] = float (len (nonSPamMessages)) / (len (nonSPamMessages) + len (spamMessages))\n",
+    "        self.priors[1] = 1.0 - self.priors[0]\n",
+    "        self.likelihoods = []\n",
+    "        for i, w in enumerate (self.words):\n",
+    "            prob1 = (1.0 + len ([m for m in nonSPamMessages if w in m])) / len (nonSPamMessages)\n",
+    "            prob2 = (1.0 + len ([m for m in spamMessages if w in m])) / len (spamMessages)\n",
+    "            self.likelihoods.append ([min (prob1, 0.95), min (prob2, 0.95)])\n",
+    "        self.likelihoods = np.array (self.likelihoods).T\n",
+    "        \n",
+    "    def predict (self, message):\n",
+    "        posteriors = np.copy (self.priors)\n",
+    "        for i, w in enumerate (self.words):\n",
+    "            if w in message.lower():  # convert to lower-case\n",
+    "                posteriors *= self.likelihoods[:,i]\n",
+    "            else:                                   \n",
+    "                posteriors *= np.ones (2) - self.likelihoods[:,i]\n",
+    "            posteriors = posteriors / np.linalg.norm (posteriors)  # normalize\n",
+    "        if posteriors[0] > 0.5:\n",
+    "            return ['ham', posteriors[0]]\n",
+    "        return ['spam', posteriors[1]]    \n",
+    "\n",
+    "    def score (self, messages, labels):\n",
+    "        confusion = np.zeros(4).reshape (2,2)\n",
+    "        for m, l in zip (messages, labels):\n",
+    "            if self.predict(m)[0] == 'ham' and l == 'ham':\n",
+    "                confusion[0,0] += 1\n",
+    "            elif self.predict(m)[0] == 'ham' and l == 'spam':\n",
+    "                confusion[0,1] += 1\n",
+    "            elif self.predict(m)[0] == 'spam' and l == 'ham':\n",
+    "                confusion[1,0] += 1\n",
+    "            elif self.predict(m)[0] == 'spam' and l == 'spam':\n",
+    "                confusion[1,1] += 1\n",
+    "        return (confusion[0,0] + confusion[1,1]) / float (confusion.sum()), confusion"
    ]
   }
  ],
