--- a/src/spamDetector.ipynb
+++ b/src/spamDetector.ipynb
@@ -442,6 +442,19 @@
     "                confusion[1,1] += 1\n",
     "        return (confusion[0,0] + confusion[1,1]) / float (confusion.sum()), confusion"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 4: Explaining the Code Provided in Part 3\n",
+    "\n",
+    "Before explaining the code that was provided in Part 3, it is important to have some level of intuition as to what a spam email message might look like. Usually they have words designed to catch your eye and, in some sense, to tempt you to open them. Also, spam emails tend to have words written in all capital letters and use a lot of exclamation marks.\n",
+    "\n",
+    "The `train` *function* calculates and stores the prior probabilities and likelihoods based on the training dataset. In Naïve Bayes, this is all the training phase does. \n",
+    "\n",
+    "The `predict` *function* repeatedly applies the Naïve Bayes theorem to every word in the constructed *dictionary* and, based on the posterior probability, it classifies each email as `spam` or `non-spam`. The `score` *function* calls `predict` for multiple emails and compares the outcomes with the supplied `ground truth` labels, thus evaluating the classifier. It also computes and returns a confusion matrix."
+   ]
   }
  ],
  "metadata": {
