training the train classifier

--- a/src/spamDetector.ipynb
+++ b/src/spamDetector.ipynb
@@ -455,6 +455,89 @@
     "\n",
     "The `predict` *function* repeatedly applies the Naïve Bayes theorem to every word in the constructed *dictionary* and, based on the posterior probability, it classifies each email as `spam` or `non-spam`. The `score` *function* calls `predict` for multiple emails and compares the outcomes with the supplied `ground truth` labels, thus evaluating the classifier. It also computes and returns a confusion matrix."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 5: Training the `train`  Classifier\n",
+    "\n",
+    "Looking at the definition of the `train` *function* in Part 2, you can see that the training *functions* require the `non-spam` and `spam` emails to be passed on separately.\n",
+    "\n",
+    "The `non-spam` emails can be passed using the code given below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nonSpamEmails = [m for (m, l) in zip(trainingEmail, traininglbls) if 'ham' in l]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below to passes the spam emails."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spamEmails = [m for (m, l) in zip(trainingEmail, traininglbls) if 'spam' in l]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the cell below to see how many `non-spam` and `spam` emails there are."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2170\n",
+      "330\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(nonSpamEmails))\n",
+    "print(len(spamEmails))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Their sum equals 2,500 as expected. \n",
+    "\n",
+    "Next, the classifier is created for the analysis using the `NaiveBayesForSpam`*function*. \n",
+    "\n",
+    "After that, `non-spammsgs` and `spammsgs` are trained using the `train` *function*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = NaiveBayesForSpam()\n",
+    "clf.train(nonSpamEmails, spamEmails)"
+   ]
   }
  ],
  "metadata": {
