--- a/src/spamDetector.ipynb
+++ b/src/spamDetector.ipynb
@@ -687,7 +687,152 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Part 7: Training the `train2` Classifier\n",
+    "\n",
+    "In this section, a second classifier is defined, `train2`, and its performances compared to the `train` classifier defined above.\n",
+    "\n",
+    "The `train2` classifier is defined in the code cell below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NaiveBayesForSpam:\n",
+    "    def train2 ( self , nonSpamMessages , spamMessages) :\n",
+    "            self.words = set (' '.join (nonSpamMessages + spamMessages).split())\n",
+    "            self.priors = np. zeros (2)\n",
+    "            self.priors [0] = float (len (nonSpamMessages)) / (len (nonSpamMessages) +len( spamMessages ) )\n",
+    "            self.priors [1] = 1.0 - self . priors [0] \n",
+    "            self.likelihoods = []\n",
+    "            spamkeywords = [ ]\n",
+    "            for i, w in enumerate (self.words):\n",
+    "                prob1 = (1.0 + len ([m for m in nonSpamMessages if w in m])) /len ( nonSpamMessages )\n",
+    "                prob2 = (1.0 + len ([m for m in spamMessages if w in m])) /len ( spamMessages ) \n",
+    "                if prob1 * 20 < prob2:\n",
+    "                    self.likelihoods.append([min (prob1 , 0.95) , min (prob2 , 0.95) ])\n",
+    "                    spamkeywords . append (w) \n",
+    "            self.words = spamkeywords\n",
+    "            self.likelihoods = np.array (self.likelihoods).T \n",
+    "            \n",
+    "    def predict (self, message):\n",
+    "        posteriors = np.copy (self.priors)\n",
+    "        for i, w in enumerate (self.words):\n",
+    "            if w in message.lower():  # convert to lower-case\n",
+    "                posteriors *= self.likelihoods[:,i]\n",
+    "            else:                                   \n",
+    "                posteriors *= np.ones (2) - self.likelihoods[:,i]\n",
+    "            posteriors = posteriors / np.linalg.norm (posteriors)  # normalise\n",
+    "        if posteriors[0] > 0.5:\n",
+    "            return ['ham', posteriors[0]]\n",
+    "        return ['spam', posteriors[1]]    \n",
+    "\n",
+    "    def score (self, messages, labels):\n",
+    "        confusion = np.zeros(4).reshape (2,2)\n",
+    "        for m, l in zip (messages, labels):\n",
+    "            if self.predict(m)[0] == 'ham' and l == 'ham':\n",
+    "                confusion[0,0] += 1\n",
+    "            elif self.predict(m)[0] == 'ham' and l == 'spam':\n",
+    "                confusion[0,1] += 1\n",
+    "            elif self.predict(m)[0] == 'spam' and l == 'ham':\n",
+    "                confusion[1,0] += 1\n",
+    "            elif self.predict(m)[0] == 'spam' and l == 'spam':\n",
+    "                confusion[1,1] += 1\n",
+    "        return (confusion[0,0] + confusion[1,1]) / float (confusion.sum()), confusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, the classifier is updadted for the analysis using the `NaiveBayesForSpam` *function*. The cell below creates the `clf` classifier.\n",
+    "\n",
+    "Then, training `non-spammsgs` and `spammsgs` using the `train2` *function*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = NaiveBayesForSpam()\n",
+    "clf.train2(nonSpamEmails, spamEmails)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Re-computing the score and the confusion matrix on the validation set using the updated classifier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Again, this cell may take a long time to run!\n",
+    "score_2, confusion_2 = clf.score(trainingEmail, traininglbls)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running the code cells below gets the updated values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The overall performance is:  0.9804\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The overall performance is: \", score_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The confusion matrix is:\n",
+      " [[2163.   42.]\n",
+      " [   7.  288.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The confusion matrix is:\\n\", confusion_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Takeaways**\n",
+    "\n",
+    "The `train2` classifier is faster and more accurate than the `train` classifier.\n",
+    "\n",
+    "Both `train` and `train2` successfully determine whether an email is spam or normal. However, `train2` contains an `if` statement that further distinguishes the emails as `normal` or `spam` improving the accuracy of the classifier."
+   ]
   }
  ],
  "metadata": {
