notebook overview and navigation

--- a/src/spamDetector.ipynb
+++ b/src/spamDetector.ipynb
@@ -4,6 +4,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In this notebook, Naïve Bayes theorem will be applied to a dataset that contains spam emails.\n",
+    "Naïve Bayes is a classification technique based on Bayes theorem with an assumption of independence among predictors.\n",
+    "\n",
+    "For clarity, Bayes theorem is stated mathematically as the following equation:\n",
+    "\n",
+    "$$P(A | B) = \\frac{P(B|A)P(A)}{P(B)},$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    " - $P(A| B)$ is a conditional probability: the likelihood of event $A$ occurring given that $B$ is true.\n",
+    " - $P(B|A)$ is also a conditional probability: the likelihood of event $B$ occurring given that $A$ is true.\n",
+    " - $P(A)$ and $P(B)$ are the probabilities of observing events $A$ and $B$.\n",
+    "\n",
+    "In simple terms, a Naïve Bayes classifier assumes that the presence of a particular feature in a *class* is unrelated to the presence of any other feature."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Index:\n",
+    "\n",
+    "- [Part 1 - Importing the Dataset and Exploratory Data Analysis (EDA)](#part1)\n",
+    "- [Part 2 - Shuffling  and Splitting the Emails](#part2)\n",
+    "- [Part 3 - Building a Simple Naïve Bayes Classifier From Scratch](#part3)\n",
+    "- [Part 4 - Explaining the Code Given in Part 3](#part4)\n",
+    "- [Part 5 - Train the Classifier `train`](#part5)\n",
+    "- [Part 6 - Explore the Performance of `train` Classifier ](#part6)\n",
+    "- [Part 7 - Training the `train2` Classifier ](#part7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Naïve Bayes Algorithm\n",
+    "\n",
+    "You have now learned about the **Naïve Bayes algorithm** for classification. \n",
+    "\n",
+    "The pseudo-algorithm for Naïve Bayes can be summarized as follows: \n",
+    "1. Load the training and test data.\n",
+    "2. Shuffle the messages and split them.\n",
+    "3. Build a simple Naïve Bayes classifier from scratch.\n",
+    "4. Train the classifier and explore the performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Back to top](#Index:) \n",
+    "\n",
+    "<a id='part1'></a>\n",
+    "\n",
     "### Part 1: Importing the Dataset and  Exploratory Data Analysis (EDA)\n",
     "\n",
     "Using `pandas` to import the dataset. Importing `pandas` and then reading the file using the `.read_csv` *function* and passing the name of the dataset as a *string*.\n",
@@ -237,6 +291,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Back to top](#Index:) \n",
+    "\n",
+    "<a id='part2'></a>\n",
+    "\n",
     "### Part 2: Shuffling  and Splitting the Messages\n",
     "\n",
     "In the second part, emails are shuffled and split them into a training set (2,500 messages), a validation set (1,000 messages), and a test set (all remaining messages).\n",
@@ -388,6 +446,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Back to top](#Index:) \n",
+    "\n",
+    "<a id='part3'></a>\n",
+    "\n",
     "### Part 3: Building a Simple Naïve Bayes Classifier From Scratch\n",
     "\n",
     "While Python’s SciKit-learn *library* has a [Naïve Bayes classifier](https://scikit-learn.org/stable/modules/naive_bayes.html), it works with continuous probability distributions and assumes numerical features. \n",
@@ -447,6 +509,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Back to top](#Index:) \n",
+    "\n",
+    "<a id='part4'></a>\n",
+    "\n",
     "### Part 4: Explaining the Code Provided in Part 3\n",
     "\n",
     "Before explaining the code that was provided in Part 3, it is important to have some level of intuition as to what a spam email message might look like. Usually they have words designed to catch your eye and, in some sense, to tempt you to open them. Also, spam emails tend to have words written in all capital letters and use a lot of exclamation marks.\n",
@@ -460,6 +526,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Back to top](#Index:) \n",
+    "\n",
+    "<a id='part5'></a>\n",
+    "\n",
     "### Part 5: Training the `train`  Classifier\n",
     "\n",
     "Looking at the definition of the `train` *function* in Part 2, you can see that the training *functions* require the `non-spam` and `spam` emails to be passed on separately.\n",
@@ -543,6 +613,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Back to top](#Index:) \n",
+    "\n",
+    "<a id='part6'></a>\n",
+    "\n",
     "### Part 6: Exploring the Performance of the `train` Classifier\n",
     "\n",
     "Explore the performance of the two classifiers on the *validation set* by using the `.score()` *function*.\n",
@@ -688,6 +762,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Back to top](#Index:) \n",
+    "\n",
+    "<a id='part7'></a>\n",
+    "\n",
     "### Part 7: Training the `train2` Classifier\n",
     "\n",
     "In this section, a second classifier is defined, `train2`, and its performances compared to the `train` classifier defined above.\n",
